...
    );
  }

  String _getCategoryTitle(String category) {
    switch (category) {
      case 'title':
        return 'Titles';
      case 'actor':
        return 'Cast & Crew';
      case 'genre':
        return 'Genres';
      default:
        return category;
...
